# RetailTradingEnv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  train.py
trade_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
trade_env/agent/: ppo_agent.py
trade_env/env/: coach_env.py
trade_env/models/: policy.py  value.py
trade_env/schemas/: action.py  brief.md  state.py  step_response.py
trade_env/server/: README.md  __init__.py  app.py  environment.py  requirements.txt
trade_env/simulator/: trader.py
trade_env/tests/: CoachEnvTests.py
