[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-env"
version = "0.1.0"
description = "Retail Trader Behavior Coach - RL agent that intervenes on bad trading behavior"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "trade_env.server.app:main"

[tool.setuptools]
packages = ["trade_env", "trade_env.server", "trade_env.env", "trade_env.schemas", "trade_env.agent"]